prevent overflow

--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ body {
   font-family: monospace;
   color: white;
   background-color: black;
+  overflow: hidden;
 }
 
 li {
